alteração name imgs euro e fundo dolar

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 }
 body{
-    background-image:url('/assets/Fundo-dólar.png');
+    background-image:url('/assets/Fundo-dolar.png');
     background-size:cover; /* Isso faz com que a imagem cubra todo o fundo */
     background-position: center; /* Centraliza a imagem */
 }
