--- a/style.css
+++ b/style.css
@@ -13,10 +13,15 @@
     
 
 }
-body{
-    background-image:url('/assets/Fundo.png');
+.Website-background{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    top: 0;
     background-size:cover; /* Isso faz com que a imagem cubra todo o fundo */
     background-position: center; /* Centraliza a imagem */
+    z-index: -2;
+    position: fixed;
 }
 main{
     width: 375px;
